# rdev

./: .gitignore  Cargo.toml  README.md
scripts/: dev-release.ps1
src/: app.rs  auth.rs  cli.rs  command.rs  config.rs  daemon.rs  doctor.rs  error.rs  error_info.rs  exec_summary.rs  lib.rs  main.rs  path.rs  process.rs  session.rs  sftp.rs  ssh.rs  ssh_tar.rs  sync.rs  sync_output.rs  tui.rs  up.rs
src/tui/: input.rs  logs.rs  state.rs
