[package]
name = "rdev"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ctrlc = "3.4"
notify = "6.1"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
ssh2 = "0.9"
tar = "0.4"
thiserror = "1.0"
toml = "0.8"
unicode-width = "0.1"
walkdir = "2.5"
